Added wiregaurd server creation with specified or auto localAddress mechanism
